src/App.css
/*.App-logo {
  animation: App-logo-spin infinite 20s linear;
  /*height: 80px;*/
/*}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}*/
#mainPic {
  border:3px solid black;
  margin-top: 2%;
  max-height:185px;
}
#nav {
  margin:0;
  padding:0;
  background-image: url('./images/topBar.jpg');
  color:white;
  background-size: cover;
  width:100%;
  height: 200px;
  border-bottom: 3px solid black;
  position: relative;
  top:-140px;
  z-index: 100;
  white-space: nowrap;
  overflow: hidden;
}
.mainText {
  font-style: italic;
}
.textMarginTwo {
  margin-left:150px;
  margin-right:150px;
}
.textMargin {
  margin:50px;
}
.mainTextTwo {
  font-style: italic;
  font-weight: bold;
  line-height: 35px;
}
#background li {
  font-size: 12px;
}
ul {
  list-style-type: disc;
  margin-left: 2%;
}
.applicationMove {
  margin-top: 250px;
}
#recentProj {
  text-align: center;
  font-size: 55px;
}
a {
  font-size: 18px;
}
/* unvisited link */
a:link {
    color: black;
}

/* visited link */
a:visited {
    color: black;
}

/* mouse over link */
a:hover {
    color: white;
}

/* selected link */
a:active {
    color: blue;
}
.projTitle {
  font-size: 18px;
}
#portImages {
  color:black;
  background-image: url('./images/middlebar2.jpg');
  background-size: cover;
}
.mainTitleText {
  font-weight: bold;
  font-size: 14px;
  /*white-space: nowrap;*/
}
.supportingText {
  font-size: 14px;
  font-style: italic;
}
.mainContentHeader {
  font-size: 20px;
  font-weight: bold;
}
.mainTitleText {
  font-weight: bold;
  font-size: 14px;
  /*white-space: nowrap;*/
}
.supportingText {
  font-size: 14px;
  font-style: italic;
}
.boxBackgroundTwo {
  background-color: white;
  border-radius: 5px;
  padding: 10px;
  margin-top: 2%;
  /*opacity: .9;*/
  min-height: 150px;
  margin-bottom: 1%;
}
.centerMeTimbers {
  margin-bottom: 2%;
}
.borderBox {
  margin-left: 2%;
}

.portImageGroup {
  border: 1px solid black;

  max-height: 200px;
}
.textAlignPort {
  margin-left: 15%;
}
.contactText {
  font-size: 20px;
  font-weight: bold;
}
#education {
  margin-top: 10px;
}
.mainText {
  font-style: italic;

}
.skillsTop {
  margin-top: 30px;
}
.center {
  text-align: center;
}
.boxBackground {
  color:white;
  padding: 10px;
  /*margin-top: 2%;*/
  /*opacity: .9;*/
  min-height: 250px;
}
#rightSide {
  /*position: fixed;
  z-index: 101;
  top: 301px;
  right:0;*/
}
.colorBox {
  width:100%;
  background-color: #005781;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
}
#secondColorBar {
  color:white;
  width:100%;
  background-color: #860102;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
}
#topMargin {
  /*margin-top: 175px;*/
  margin-bottom: 80px;
}
#contactBar {
  position: fixed;
  top: 214px;
  right:-30px;
}
#contactPort a {
  margin:0;
  padding:0;
}

.clear {
  float:clear;
}
#mainNameHeader {
  font-family: 'Kaushan Script', cursive;
  letter-spacing: 25px;
  font-size: 65px;
  margin-top: 5%;
}
#emailFormat {
  font-family: 'Kaushan Script', cursive;
  font-size: 25px;
  letter-spacing: 8px;
  font-weight: bold;
  margin-top: 5%;
}
#fixNavBar {
  text-align: center;
}
.textAlign {
  padding:0 5px 5px 5px;
  font-size: 14px;
  font-weight: bold;
}

